<resources>
    <string name="app_name">Chess for All ONLINE</string>
    <string name="app_name_long">Chess for All Online</string>
    <string name="app_url">http://sites.google.com/site/c4ahome/</string>
    <string name="app_newGame">Edit Game</string>
    <string name="app_pgnFileManager">PGN-FileManager</string>
    <string name="app_chessData">Game Data</string>
    <string name="app_chessNotation">Notation</string>
    <string name="app_chess960Position">Chess960: create your own Position</string>
    <string name="app_c4aPrefs">Options</string>
    <string name="app_fics">FICS (Free Internet Chess Server)</string>
    <string name="screen_small">SMALL</string>
    <string name="screen_medium">MEDIUM</string>
    <string name="screen_large">LARGE</string>
    <string name="pieces">KQRBN</string>
    <string name="move"></string>
    <string name="message">start game</string>
    <string name="playGame">play</string>
    <string name="standard">Standard</string>
    <string name="sendEmail">Send email</string>
    <string name="btn_Ok">  OK  </string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Abort">Abort</string>
    <string name="btn_Refresh">Refresh</string>
    <string name="btn_Back">Back</string>
    <string name="btn_Action">Load</string>
    <string name="btn_Yes">Yes</string>
    <string name="btn_No">No</string>
    <string name="btn_Reject">Reject</string>
    <string name="btn_Reset">Reset</string>
    <string name="btn_Pgn">PGN</string>
    <string name="btn_Move">Moves</string>
    <string name="btn_MoveText">+Text</string>
    <string name="btn_Seek">Seek</string>
    <string name="btn_Rematch">Rematch</string>
    <string name="btn_Match">Match</string>
    <string name="btn_Change">Change</string>
    <string name="btn_Fics">FICS</string>
    <string name="cl_unknownPiece">unknown piece</string>
    <string name="cl_wrongBasePosition">wrong baseposition(RKR)</string>
    <string name="cl_resultWhite">1-0</string>
    <string name="cl_resultBlack">0-1</string>
    <string name="cl_resultDraw">&#189;-&#189;</string>
    <string name="cl_gameOver">Game over</string>
    <string name="cl_50MoveRule">50-Move-Rule</string>
    <string name="cl_position3Times">3x Position</string>
    <string name="cl_moveError">move error</string>
    <string name="cl_moveWhite">white moves</string>
    <string name="cl_moveBlack">black moves</string>
    <string name="cl_moveMultiple">multiple moves</string>
    <string name="cl_moveNo">impossible move</string>
    <string name="cl_moveWrong">invalide move</string>
    <string name="cl_checkOponent">check!</string>
    <string name="cl_check">check!</string>
    <string name="cl_castlingError">castling?</string>
    <string name="cl_castlingCheck">invalide move or check</string>
    <string name="cl_emptyField">empty field</string>
    <string name="cl_kingError">only one king!</string>
    <string name="cl_fenError">FEN Error</string>
    <string name="cl_notationError">Error</string>
    <string name="menu_game">Game</string>
    <string name="menu_game_play">play</string>
    <string name="menu_game_load">view</string>
    <string name="menu_game_edit">edit</string>
    <string name="menu_game_save">save</string>
    <string name="menu_game_delete">delete</string>
    <string name="menu_game_show">C4A GameShow</string>
    <string name="menu_action">Action</string>
    <string name="menu_action_resign">resign"</string>
    <string name="menu_action_draw">draw"</string>
    <string name="menu_action_abort">abort"</string>
    <string name="menu_action_takeback">takeback"</string>
    <string name="menu_action_chat">chat"</string>
    <string name="menu_action_turnboard">turnboard"</string>
    <string name="menu_move">Move</string>
    <string name="menu_move_back">back</string>
    <string name="menu_move_next">next</string>
    <string name="menu_move_start">start position</string>
    <string name="menu_move_end">end position</string>
    <string name="menu_move_auto">start/stop AutoPlay</string>
    <string name="menu_move_delete">delete</string>
    <string name="menu_move_text">text</string>
    <string name="menu_pgn">PGN</string>
    <string name="menu_pgn_data">PGN-Data</string>
    <string name="menu_pgn_notation">PGN-Notation</string>
    <string name="menu_pgn_all">PGN All</string>
    <string name="menu_pgn_clipboardCopy">Copy game to clipboard</string>
    <string name="menu_pgn_clipboardPaste">Paste game from clipboard</string>
    <string name="menu_prefs">Options</string>
    <string name="menu_about">About</string>
    <string name="menu_about_apps">All my applications</string>
    <string name="menu_about_website">Website</string>
    <string name="menu_about_sourcecode">Source code</string>
    <string name="menu_about_contact">Contact</string>
    <string name="menu_load_extern">Sdcard</string>
    <string name="menu_load_intern">Assets</string>
    <string name="menu_load_www">Internet</string>
    <string name="menu_load_game">Game</string>
    <string name="menu_load_game_first">first</string>
    <string name="menu_load_game_last">last</string>
    <string name="menu_load_game_next">next</string>
    <string name="menu_load_game_previous">previous</string>
    <string name="menu_load_game_random">random</string>
    <string name="ngStandard"> Standard</string>
    <string name="ng960Random"> Chess960: Random</string>
    <string name="ng960Number"> Chess960: Number</string>
    <string name="ng960Manuel"> Chess960: Create your own position</string>
    <string name="ng960Id">Chess960-ID:</string>
    <string name="ngPosition">Current Startposition</string>
    <string name="ngGame"> Current Game</string>
    <string name="ng960IdValue">  (0 ... 959)</string>
    <string name="ng960Error">invalid Chess960-ID</string>
    <string name="fmLblPath">Path</string>
    <string name="fmLblFile">File</string>
    <string name="fmLblUrl">URL</string>
    <string name="fmTitleLoad">PGN-FileManager - Load Game</string>
    <string name="fmTitleSave">PGN-FileManager - Save Game</string>
    <string name="fmTitleDelete">PGN-FileManager - Delete Game</string>
    <string name="fmBtnLoad">load\ngame</string>
    <string name="fmBtnSave">save\ngame</string>
    <string name="fmBtnAppend">append\ngame</string>
    <string name="fmBtnDelete">delete\nfile</string>
    <string name="fmPathError">Path not exists!</string>
    <string name="fmFileError">File not exists or PGN-Error!</string>
    <string name="fmFileExists">File exists, overwrite?</string>
    <string name="fmFileNotEndsWithPgn">No PGN-File(.pgn)!</string>
    <string name="fmWebFileError">No Web-File(PGN) exists, URL: </string>
    <string name="fmPgnError">PGN-File-Name-Error</string>
    <string name="fmDeleteFileQuestion">Delete</string>
    <string name="daTxtLblEvent">Event</string>
    <string name="daTxtLblSite">Site</string>
    <string name="daTxtLblDate">Date</string>
    <string name="daTxtLblRound">Round</string>
    <string name="daTxtLblWhite">White</string>
    <string name="daTxtLblBlack">Black</string>
    <string name="daTxtLblResult">Result</string>
    <string name="daTxtLblWhiteElo">Elo (White)</string>
    <string name="daTxtLblBlackElo">Elo (Black)</string>
    <string name="daTxtLblVariant">Variant</string>
    <string name="dgTitleFileDialog">c4a - PGN-File-Dialog</string>
    <string name="dgTitleDialog">c4a - Dialog</string>
    <string name="prefsUser">User - Options</string>
    <string name="prefsUserShowLastPosition">Show last Position</string>
    <string name="prefsUserShowStatusBar">Show Statusbar</string>
    <string name="prefsUserEnableSounds">Sound effects</string>
    <string name="prefsUserEnableScreenTimeout">Screen timeout off</string>
    <string name="prefsUserEnableLog">Writing log messages</string>
    <string name="prefsUserEnableChat">Chatting</string>
    <string name="prefsUserEnableChatPromotion">Chat message(1. move)</string>
    <string name="prefsUserEditChatPromotionTitle">Edit chat message</string>
    <string name="prefsUserEditChatPromotionText">playing with: Chess for All ONLINE (Android)</string>
    <string name="prefsCommonPrefScreen">Common settings</string>
    <string name="prefsChatPrefScreen">Chat settings</string>
    <string name="prefsGuiChessBoard">Chessboard</string>
    <string name="ficsName">Free Internet Chess Server</string>
    <string name="ficsDialogTitle">C4A / Chess Server - Dialog</string>
    <string name="ficsHostError">FICS host error</string>
    <string name="ficsConnecting">connecting to</string>
    <string name="ficsConnectionError">Server connection problem</string>
    <string name="ficsConnectionCheck">Chess server connection ...</string>
    <string name="ficsConnectionClosed">Chess server connection closed</string>
    <string name="ficsConnectionBad">Bad connection</string>
    <string name="ficsConnectionBroken">Connection broken</string>
    <string name="ficsConnectionTimeOut">Timeout(connection closed)</string>
    <string name="ficsLogging">login ... </string>
    <string name="ficsLoggedIn">logged in as</string>
    <string name="ficsLoginCanceled">login/seek canceled</string>
    <string name="ficsUserError">username or password wrong</string>
    <string name="ficsUserRegistered">registered user: </string>
    <string name="ficsSeeking">seeking ... </string>
    <string name="ficsLoginError">login error, player: </string>
    <string name="ficsRequestError">request error: </string>
    <string name="ficsPlayerMove">your move!</string>
    <string name="ficsPlayerResign">resign the current game?</string>
    <string name="ficsPlayerRequestDraw">draw offer?</string>
    <string name="ficsPlayerRequestAbort">abort the game?\nrefresh the connection?</string>
    <string name="ficsOpponentRequestTakeback">opponent would like to take back last move</string>
    <string name="ficsOpponentRequestDraw">opponent offers a draw</string>
    <string name="ficsOpponentRequestAbort">abort request from your opponent</string>
    <string name="ficsOpponentThinking">opponent thinking . . .</string>
    <string name="ficsMatchAccepts">accepts the match offer</string>
    <string name="ficsMatchDeclines">declines the match offer</string>
    <string name="ficsMatchNotLoggedIn">is not logged in</string>
    <string name="ficsChallenge">new challenge: \n</string>
    <string name="ficsMessageResign">resigns</string>
    <string name="ficsMessageAbort">abort</string>
    <string name="ficsMessageAgreement">mutual agreement</string>
    <string name="ficsMessageTime">time</string>
    <string name="ficsMessageCheckmate">checkmate</string>
    <string name="ficsMessageStalemate">stalemate</string>
    <string name="ficsTakebackAccepted">your takeback has been accepted</string>
    <string name="ficsTakebackDeclined">your takeback has been declined</string>
    <string name="ficsRequestDeclined">your request has been declined</string>
    <string name="ficsChat">type here to chat</string>
    <string name="ficsExit">leave the chessserver?</string>
    <string name="ficsExitAndAbort">aborting the game and leave the chessserver?</string>
    <string name="csBtnNewLogin">new \nlogin</string>
    <string name="csBtnGuest">play as \nguest</string>
    <string name="csBtnRefresh">refresh</string>
    <string name="csBtnExit">exit</string>
    <string name="csIpFics">freechess.org</string>
    <string name="csPortFics">23</string>
    <string name="csLogin">login - data</string>
    <string name="csUser">user</string>
    <string name="csEtUser">guest</string>
    <string name="csPassword">password</string>
    <string name="csEtPassword"></string>
    <string name="csSeek">seek - data</string>
    <string name="csOpponent">opponent</string>
    <string name="csEtOpponent"></string>
    <string name="csTimeGame">Game time</string>
    <string name="csEtTimeGame">5</string>
    <string name="csTimeMove">move time</string>
</resources>